Done, no bonuses

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,5 @@
 <div>
-
+  <img src='images/beer.png' alt='servesabiar' />
+  <button><a href='/beers'>Check the Beers!</a></button>
+  <button><a href='/randomBeers'>Check a Random Beer!</a></button>
 </div>
